@@ -6,6 +6,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Preserve other email headers added
+
 1.0 - 3/6/2013
 ----------------------------------------------------------------------
 - Initial release
